# sky_seg

./: main.py  pyproject.toml  requirements.txt  sky_seg.ipynb
